--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-APP_NAME=Laravel
-APP_ENV=local
+APP_NAME=FCDMS
+APP_ENV=production
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
@@ -11,13 +11,13 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=dms
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=dms_db
+DB_USERNAME=dms
+DB_PASSWORD=dms
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
-FILESYSTEM_DISK=local
+FILESYSTEM_DISK=public
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
